# IonicEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/ionicengine/: includes.h  ionicengine.h
include/ionicengine/gl/: buffer.h
include/ionicengine/graphics/: animation.h  font.h  graphics.h  gui.h  screen.h  shader.h  textures.h  utils.h
include/ionicengine/input/: controller.h  inputmanager.h
include/ionicengine/sound/: sound.h  wav.h
include/ionicengine/window/: monitor.h  window.h
resources/ionicengine/shaders/: 2dbasic.frag  2dbasic.vert  image.frag  image.vert  text.frag  text.vert
src/: ionicengine.cpp
src/gl/: buffer.cpp
src/graphics/: animation.cpp  font.cpp  graphics.cpp  gui.cpp  screen.cpp  shader.cpp  textures.cpp  utils.cpp
src/input/: controller.cpp  inputmanager.cpp
src/sound/: sound.cpp  wav.cpp
src/window/: monitor.cpp  window.cpp
tests/: CMakeLists.txt  cubes_lightning.cpp  fire.cpp  image.cpp  joysticks.cpp  monitors.cpp  resources_monitor.cpp  text_input.cpp
tests/learnopengl/: camera.h
tests/resources/cubes_lightning/shaders/: colors.frag  colors.vert  lamp.frag  lamp.vert
tests/resources/ionic_tests/sounds/: LICENSE.txt
